# gimp-studio-mcp

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
src/gimp_mcp/: __init__.py  cli.py  compat.py  install.py  instructions.py  server.py
src/gimp_mcp/bridge/: __init__.py  client.py  gimp_compat.py  gimp_side.py  launcher.py  protocol.py
src/gimp_mcp/data/: garment_presets.json
src/gimp_mcp/tools/: __init__.py  analysis.py  color_mgmt.py  color_tone.py  document.py  filters.py  layers.py  masks_alpha.py  paint.py  print_dtf.py  safety.py  selections.py  session.py  text.py
tests/: conftest.py  test_bitmap_content.py  test_bridge_purity.py  test_client.py  test_compat.py  test_garment_presets.py  test_instructions.py  test_offsets_resolution_centralized.py  test_protocol.py  test_registration.py  test_selection_bounds_centralized.py
tests/fixtures/: NOTICE
tests/fixtures/golden/: .gitkeep
tests/gimp/: conftest.py  test_analysis.py  test_color_mgmt.py  test_color_tone.py  test_filters.py  test_layers.py  test_masks_alpha.py  test_paint.py  test_print_dtf.py  test_safety.py  test_selections.py  test_smoke.py  test_text.py  test_tools.py
